--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="https://www.facebook.com/maxxsteal" onclick=$("#menu-close").click();>Find me on Facebook</a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="#top" onclick=$("#menu-close").click();>Go to top</a>
             </li>
             <li>
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
